<resources>
    <string name="app_name">Telegram</string>
    <string name="default_username">Senko San</string>
    <string name="settings_default_status">Online</string>
    <string name="settings_text_account">Account</string>
    <string name="settings_default_number">+79000000000</string>
    <string name="settings_change_number">Change number</string>
    <string name="settings_default_username">senko-san</string>
    <string name="settings_label_username">Username</string>
    <string name="settings_bio_label">About</string>
    <string name="settings_default_bio">Something about you</string>
    <string name="settings_menu_change_username">Change name</string>
    <string name="settings_menu_logout">Logout</string>
    <string name="cd_auth_image">auth_image</string>
    <string name="auth_code_desc">We\'ve sent an SMS with an activation code to your phone</string>
    <string name="auth_code_title">Enter code</string>
    <string name="auth_hint_default_code">- - - - - -</string>
    <string name="auth_title_phone">Your Phone</string>
    <string name="auth_toast_enter_phone">Enter phone number</string>
    <string name="phone_enter_hint">- --- -- --</string>
    <string name="settings_hint_name">Name</string>
    <string name="settings_input_hint_surname">Surname</string>
    <string name="settings_toast_name_is_empty">Name can\'t be empty</string>
    <string name="toast_data_update">Data update</string>
    <string name="settings_hint_input_username">\@username</string>
    <string name="settings_hint_input_bio">Something about you</string>
</resources>