<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterCodeFragment">

    <ImageView
        android:id="@+id/auth_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:contentDescription="@string/cd_auth_image"
        android:src="@drawable/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auth_text_enter_code_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin"
        android:gravity="center"
        android:text="@string/auth_code_title"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/normal_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/auth_text_enter_code_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_image" />

    <TextView
        android:id="@+id/auth_text_enter_code_desc"
        style="@style/small_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin"
        android:gravity="center"
        android:text="@string/auth_code_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_text_enter_code_title" />

    <EditText
        android:id="@+id/auth_input_code"
        style="@style/editText"
        android:gravity="center"
        android:maxLength="6"
        android:hint="@string/auth_hint_default_code"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_text_enter_code_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>